# slack-photo-update-script

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  settings.toml  slack_app_manifest.json
core/: update_photo.py
data_models/: base.py  channel.py  instruction_entries.py  str_enum.py  user.py  workspace.py  workspace_role.py
instructions/: update_user_photos.csv
utils/: config.py  csv_manager.py  slack_connector.py
