[project]
name = "slack-enterprise-grid-management"
version = "0.1.0"
description = "A toolbox for managing slack enterprise grid"
requires-python = "==3.11.11"
dependencies = [
    "dynaconf>=3.2.7",
    "pydantic>=2.10.6",
    "slack-bolt>=1.22.0",
    "slack-sdk>=3.34.0",
    "typer>=0.15.1",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
]
